<resources>
    <string name="app_name">Notation</string>
    <string name="fp">Operation with floating point</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mull">*</string>
    <string name="div">/</string>
    <string name="result">Result</string>
    <string name="textEdit1_FP">Add first number</string>
    <string name="editNumber2_FP">Add second number</string>
    <string name="goTo">Go To Format With Floating Point</string>
    <string name="secondNumber">Second number</string>
    <string name="firstNumber">First number</string>
    <string name="NS">Notation</string>
    <string name="bin">Bin</string>
    <string name="Oct">Oct</string>
    <string name="hex">Hex</string>
    <string name="dex">Dex</string>
    <string name="notatoinFirstNumber">Add first number</string>
    <string name="NotationSecondNumber">Add second number</string>
    <string name="input">Input type</string>
    <string name="output">Output type</string>
    <string name="firstNum">First number</string>
    <string name="secondNum">Second number</string>
    <string name="inputBin">Bin</string>
    <string name="inputOct">Oct</string>
    <string name="inputDec">Dec</string>
    <string name="inputHex">Hex</string>
    <string name="inputType">Input type</string>
    <string name="outputType">Output type</string>
    <string name="resultFirstNumber">First number</string>
    <string name="secondNumber2">Second number</string>
    <string name="fromFP">FROM FLOATING POINT</string>
</resources>
